<resources>
    <string name="app_name">atop</string>
    <string name="fps">FPS:</string>
    <string name="fps_1_low">Low 1%:</string>
    <string name="fps_0_1_low">Low 0.1%:</string>
    <string name="launch_overlay">Launch Overlay</string>
    <string name="stop_overlay">Stop Overlay</string>
    <string name="atop">atop</string>
    <string name="gpu_utilization">GPU: %s %%</string>
    <string name="power_consumption">PWR: %s W</string>
    <string name="cpu_utilization">CPU: %s %%</string>
    <string name="memory_utilization">MEM: %s MB</string>
</resources>